<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:paddingBottom="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="80dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="80dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_backdrop"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/holo_blue_bright" />

        <ImageView
            android:id="@+id/poster_detail"
            android:layout_width="80dp"
            android:layout_height="130dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_backdrop"
            app:layout_constraintLeft_toLeftOf="@+id/image_backdrop"
            app:layout_constraintRight_toRightOf="@+id/image_backdrop"
            app:layout_constraintTop_toBottomOf="@+id/image_backdrop"
            app:srcCompat="@color/colorSecondaryLight"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/icon_rating"
            android:id="@+id/imageView2"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toRightOf="@+id/poster_detail"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/image_backdrop"
            app:layout_constraintHorizontal_bias="0.0" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            app:elevation="5dp"
            app:fabSize="mini"
            app:layout_constraintRight_toRightOf="@+id/image_backdrop"
            app:srcCompat="@drawable/icon_fab"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/poster_detail"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="@+id/poster_detail"
            app:layout_constraintBottom_toBottomOf="@+id/poster_detail" />

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/movie_date"
            android:textColor="@color/colorText"
            app:layout_constraintLeft_toRightOf="@+id/poster_detail"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toTopOf="@+id/image_backdrop"
            android:layout_marginTop="224dp" />

        <TextView
            android:id="@+id/rating_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/movie_rating"
            android:textColor="@color/colorText"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintLeft_toLeftOf="@+id/imageView2"
            app:layout_constraintRight_toRightOf="@+id/imageView2"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp" />

        <TextView
            android:id="@+id/plot_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@color/colorSecondaryDark"
            android:gravity="start"
            android:padding="16dp"
            android:text="@string/movie_plot"
            android:textColor="@color/colorText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster_detail" />

        <TextView
            android:id="@+id/video_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/movie_videos"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold|normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plot_tv"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerReview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="vertical"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_tv" />

        <TextView
            android:id="@+id/review_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/movie_reviews"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold|normal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerVideo" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerVideo"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            android:scrollbars="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_tv" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>